# Orion

./: CMakeLists.txt  build-run.sh  setup.sh
src/: main.cpp
src/Rigel/: Renderer.cpp  Renderer.h
